--- a/franske-course-information/modules/itc-2516/pages/schedule.adoc
+++ b/franske-course-information/modules/itc-2516/pages/schedule.adoc
@@ -292,15 +292,12 @@ NOTE: Today is Labor Day and there is no class, however, there is some additiona
 * Prepare for Skills Exam
 * Practice Final Exam
 * Practice Packet Tracer Skills Assessment
-* Cisco Course Feedback Form
-* Online Final Exam
 * Packet Tracer Skills Assessment
-
+* Unit Exam Modules 16 - 17: Building and Securing a Small Network
 
 === Assignments Due at the start of class today
 * Module 17 Online Discussion Response Posts
 * Module 16 Lab Report Activities
-* Unit Exam Modules 16 - 17: Building and Securing a Small Network
 
 == Oct 21
 === Work to do in class today
@@ -314,36 +311,301 @@ NOTE: Today is Labor Day and there is no class, however, there is some additiona
 * CCNA 2 Module 1 Online Discussion First Post
 * CCNA 2 Module 2 Online Discussion First Post
 * CCNA 2 Module 1 Packet Tracer Online Submission Activities
+* CCNA 1 Cisco Course Feedback Form
+* CCNA 1 Online Final Exam
 
 === Assignments Due at the start of class today
 * Module 17 Lab Report Activities
 * Unit Exam Modules 16 - 17: Building and Securing a Small Network
 * CCNA 1 Practice Final Exam
 * CCNA 1 Practice Packet Tracer Skills Assessment
-* CCNA 1 Cisco Course Feedback Form
-* CCNA 1 Online Final Exam
 * CCNA 1 Packet Tracer Skills Assessment
 
-== FUTURE DATES
-* The schedule for dates after October 21 will be determined later in the semester but will follow a similar pattern.
+== Oct 23
+=== Work to do in class today
+* CCNA 2 Module 1 Lab Activities
 
-        In Class
-21-Oct	CCNA 1 SBA
-23-Oct	Mod 1,2
-28-Oct	Mod 3
-30-Oct	Mod 4
-4-Nov	Mod 5
-6-Nov	Mod 6
-11-Nov	Mod 7
-13-Nov	Mod 8
-18-Nov	Mod 9
-20-Nov	Mod 10, 11
-25-Nov	Mod 11
-27-Nov	Mod 12, 13
-2-Dec	Mod 14
-4-Dec	Mod 15
-9-Dec	Mod 16
-11-Dec	Skills Exam
-16-Dec	Final Exam
+=== Readings to do before next class
+* CCNA 2 Module 3
+
+=== Other Work to do before next class
+* CCNA 2 Module 3 Online Discussion First Post
+* CCNA 2 Module 1 Online Discussion Response Posts
+* CCNA 2 Module 2 Online Discussion Response Posts
+* CCNA 2 Module 3 Packet Tracer Online Submission Activities
+
+=== Assignments Due at the start of class today
+* CCNA 2 Module 1 Online Discussion First Post
+* CCNA 2 Module 2 Online Discussion First Post
+* CCNA 2 Module 1 Packet Tracer Online Submission Activities
+* CCNA 1 Cisco Course Feedback Form
+* CCNA 1 Online Final Exam
+
+== Oct 28
+=== Work to do in class today
+* CCNA 2 Module 3 Lab Activities
+
+=== Readings to do before next class
+* CCNA 2 Module 4
+
+=== Other Work to do before next class
+* CCNA 2 Module 4 Online Discussion First Post
+* CCNA 2 Module 3 Online Discussion Response Posts
+* CCNA 2 Module 4 Packet Tracer Online Submission Activities
+
+=== Assignments Due at the start of class today
+* CCNA 2 Module 3 Online Discussion First Post
+* CCNA 2 Module 1 Online Discussion Response Posts
+* CCNA 2 Module 2 Online Discussion Response Posts
+* CCNA 2 Module 3 Packet Tracer Online Submission Activities
+
+== Oct 30
+=== Work to do in class today
+* CCNA 2 Module 4 Lab Activities
+
+=== Readings to do before next class
+* CCNA 2 Module 5
+
+=== Other Work to do before next class
+* CCNA 2 Module 5 Online Discussion First Post
+* CCNA 2 Module 4 Online Discussion Response Posts
+* Unit Exam Modules 1 - 4: Switching Concepts, VLANs, and InterVLAN Routing Exam
+
+=== Assignments Due at the start of class today
+* CCNA 2 Module 4 Online Discussion First Post
+* CCNA 2 Module 3 Online Discussion Response Posts
+* CCNA 2 Module 4 Packet Tracer Online Submission Activities
+
+== Nov 4
+=== Work to do in class today
+* CCNA 2 Module 5 Lab Activities
+
+=== Readings to do before next class
+* CCNA 2 Module 6
+
+=== Other Work to do before next class
+* CCNA 2 Module 6 Online Discussion First Post
+* CCNA 2 Module 5 Online Discussion Response Posts
+* CCNA 2 Module 6 Packet Tracer Online Submission Activities
+
+=== Assignments Due at the start of class today
+* CCNA 2 Module 5 Online Discussion First Post
+* CCNA 2 Module 4 Online Discussion Response Posts
+* Unit Exam Modules 1 - 4: Switching Concepts, VLANs, and InterVLAN Routing Exam
+
+== Nov 6
+=== Work to do in class today
+* CCNA 2 Module 6 Lab Activities
+
+=== Readings to do before next class
+* CCNA 2 Module 7
+
+=== Other Work to do before next class
+* CCNA 2 Module 7 Online Discussion First Post
+* CCNA 2 Module 6 Online Discussion Response Posts
+* CCNA 2 Module 7 Packet Tracer Online Submission Activities
+* Unit Exam Modules 5 - 6: Redundant Networks Exam
+
+=== Assignments Due at the start of class today
+* CCNA 2 Module 6 Online Discussion First Post
+* CCNA 2 Module 5 Online Discussion Response Posts
+* CCNA 2 Module 6 Packet Tracer Online Submission Activities
+
+== Nov 11
+=== Work to do in class today
+* CCNA 2 Module 7 Lab Activities
+
+=== Readings to do before next class
+* CCNA 2 Module 8
+
+=== Other Work to do before next class
+* CCNA 2 Module 8 Online Discussion First Post
+* CCNA 2 Module 7 Online Discussion Response Posts
+
+=== Assignments Due at the start of class today
+* CCNA 2 Module 7 Online Discussion First Post
+* CCNA 2 Module 6 Online Discussion Response Posts
+* CCNA 2 Module 7 Packet Tracer Online Submission Activities
+* Unit Exam Modules 5 - 6: Redundant Networks Exam
+
+== Nov 13
+=== Work to do in class today
+* CCNA 2 Module 8 Lab Activities
+
+=== Readings to do before next class
+* CCNA 2 Module 9
+
+=== Other Work to do before next class
+* CCNA 2 Module 9 Online Discussion First Post
+* CCNA 2 Module 8 Online Discussion Response Posts
+* CCNA 2 Module 9 Packet Tracer Online Submission Activities
+
+=== Assignments Due at the start of class today
+* CCNA 2 Module 8 Online Discussion First Post
+* CCNA 2 Module 7 Online Discussion Response Posts
+
+== Nov 18
+=== Work to do in class today
+* CCNA 2 Q & A Session
+* Internet History Part 1
+
+=== Readings to do before next class
+* CCNA 2 Module 10
+* CCNA 2 Module 11
+
+=== Other Work to do before next class
+* CCNA 2 Module 10 Online Discussion First Post
+* CCNA 2 Module 11 Online Discussion First Post
+* CCNA 2 Module 9 Online Discussion Response Posts
+* CCNA 2 Module 11 Packet Tracer Online Submission Activities
+* Unit Exam Modules 7 - 9: Available and Reliable Networks Exam
+
+=== Assignments Due at the start of class today
+* CCNA 2 Module 9 Online Discussion First Post
+* CCNA 2 Module 8 Online Discussion Response Posts
+* CCNA 2 Module 9 Packet Tracer Online Submission Activities
+
+== Nov 20
+=== Work to do in class today
+* CCNA 2 Module 11 Lab Activities
+
+=== Readings to do before next class
+* CCNA 2 Module 12
+
+=== Other Work to do before next class
+* CCNA 2 Module 12 Online Discussion First Post
+* CCNA 2 Module 10 Online Discussion Response Posts
+* CCNA 2 Module 11 Online Discussion Response Posts
+
+=== Assignments Due at the start of class today
+* CCNA 2 Module 10 Online Discussion First Post
+* CCNA 2 Module 11 Online Discussion First Post
+* CCNA 2 Module 9 Online Discussion Response Posts
+* CCNA 2 Module 11 Packet Tracer Online Submission Activities
+* Unit Exam Modules 7 - 9: Available and Reliable Networks Exam
+
+== Nov 25
+=== Work to do in class today
+* CCNA 2 Q & A Session
+* Internet History Part 2
+
+=== Readings to do before next class
+* CCNA 2 Module 13
+
+=== Other Work to do before next class
+* CCNA 2 Module 13 Online Discussion First Post
+* CCNA 2 Module 12 Online Discussion Response Posts
+* CCNA 2 Module 13 Packet Tracer Online Submission Activities
+
+=== Assignments Due at the start of class today
+* CCNA 2 Module 12 Online Discussion First Post
+* CCNA 2 Module 10 Online Discussion Response Posts
+* CCNA 2 Module 11 Online Discussion Response Posts
+
+== Nov 27
+=== Work to do in class today
+* CCNA 2 Module 13 Lab Activities
+
+=== Readings to do before next class
+* CCNA 2 Module 14
+
+=== Other Work to do before next class
+* CCNA 2 Module 14 Online Discussion First Post
+* CCNA 2 Module 13 Online Discussion Response Posts
+* CCNA 2 Module 14 Packet Tracer Online Submission Activities
+* Unit Exam Modules 10 - 13: L2 Security and WLANs Exam
+
+=== Assignments Due at the start of class today
+* CCNA 2 Module 13 Online Discussion First Post
+* CCNA 2 Module 12 Online Discussion Response Posts
+* CCNA 2 Module 13 Packet Tracer Online Submission Activities
+
+== Dec 2
+=== Work to do in class today
+* CCNA 2 Q & A Session
+* Internet History Part 3
+
+=== Readings to do before next class
+* CCNA 2 Module 15
+
+=== Other Work to do before next class
+* CCNA 2 Module 15 Online Discussion First Post
+* CCNA 2 Module 14 Online Discussion Response Posts
+* CCNA 2 Module 15 Packet Tracer Online Submission Activities
+
+=== Assignments Due at the start of class today
+* CCNA 2 Module 14 Online Discussion First Post
+* CCNA 2 Module 13 Online Discussion Response Posts
+* CCNA 2 Module 14 Packet Tracer Online Submission Activities
+* Unit Exam Modules 10 - 13: L2 Security and WLANs Exam
+
+== Dec 4
+=== Work to do in class today
+* CCNA 2 Module 15 Lab Activities
+
+=== Readings to do before next class
+* CCNA 2 Module 16
+
+=== Other Work to do before next class
+* CCNA 2 Module 16 Online Discussion First Post
+* CCNA 2 Module 15 Online Discussion Response Posts
+* CCNA 2 Module 16 Packet Tracer Online Submission Activities
+
+=== Assignments Due at the start of class today
+* CCNA 2 Module 15 Online Discussion First Post
+* CCNA 2 Module 14 Online Discussion Response Posts
+* CCNA 2 Module 15 Packet Tracer Online Submission Activities
+
+== Dec 9
+=== Work to do in class today
+* CCNA 2 Module 16 Lab Activities
+
+=== Readings to do before next class
+* None
+
+=== Other Work to do before next class
+* Prepare for CCNA 2 Skills Exam
+* CCNA 2 Module 16 Online Discussion Response Posts
+* CCNA 2 Practice Final Exam
+* CCNA 2 Practice Packet Tracer Skills Assessment
+* CCNA 2 Packet Tracer Skills Assessment
+* Unit Exam Modules 14 - 16: Routing Concepts and Configuration Exam
+
+=== Assignments Due at the start of class today
+* CCNA 2 Module 16 Online Discussion First Post
+* CCNA 2 Module 15 Online Discussion Response Posts
+* CCNA 2 Module 16 Packet Tracer Online Submission Activities
+
+== Dec 11
+=== Work to do in class today
+* CCNA 2 Skills Exam
+
+=== Readings to do before next class
+* None
+
+=== Other Work to do before next class
+* CCNA 2 Cisco Course Feedback Form
+* CCNA 2 Online Final Exam
+
+=== Assignments Due at the start of class today
+* CCNA 2 Module 16 Online Discussion Response Posts
+* CCNA 2 Practice Final Exam
+* CCNA 2 Practice Packet Tracer Skills Assessment
+* CCNA 2 Packet Tracer Skills Assessment
+* Unit Exam Modules 14 - 16: Routing Concepts and Configuration Exam
+
+== Dec 16
+=== Work to do in class today
+* No Required Class Meeting Today
+
+=== Readings to do before next class
+* None
+
+=== Other Work to do before next class
+* None
+
+=== Assignments Due at the start of class today
+* CCNA 2 Cisco Course Feedback Form
+* CCNA 2 Online Final Exam
 
 include::program-info:ROOT:partial$stdfooter.adoc[]
