--- a/franske-course-information/modules/itc-2611/pages/assignments.adoc
+++ b/franske-course-information/modules/itc-2611/pages/assignments.adoc
@@ -102,7 +102,7 @@ Any participation activities completed in the course will go here. This falls in
 * Meet with the instructor once per week to discuss course progress and ask questions (up to 10 points each based on progress)
 
 == Unit Assessments
-You are responsible for completing all of the online unit assessments listed below. Multiple chapters are included in single exams. These exams fall into the online assessments category of your course grade. 
+You are responsible for completing all of the online unit assessments listed below. Multiple chapters are included in single exams. These exams fall into the online assessments category of your course grade. *If you are not able to complete an exam by the due date listed on the course schedule it is your reponsibility to contact the instructor prior to the due date for the exam. Contacting the instructor after the due date for the exam will usually mean the late work policy will apply (see the syllabus).* For example, if the exam reports as not activated, or the website is down, you have lost Internet access, etc. contact the instructor as soon as possible for assistance.
 
 * Chapters 1 - 5: L2 Redundancy Exam
 * Chapters 6 - 7: Routing Essentials and EIGRP Exam
