--- a/franske-course-information/modules/itc-2621/pages/assignments.adoc
+++ b/franske-course-information/modules/itc-2621/pages/assignments.adoc
@@ -92,7 +92,7 @@ You must do one of the following choices at least once a week (up to 10 points e
 
 === Unit Assessments
 
-You are responsible for completing all of the online unit assessments listed below. Multiple chapters are included in single exams. These exams fall into the online assessments category of your course grade. 
+You are responsible for completing all of the online unit assessments listed below. Multiple chapters are included in single exams. These exams fall into the online assessments category of your course grade. *If you are not able to complete an exam by the due date listed on the course schedule it is your reponsibility to contact the instructor prior to the due date for the exam. Contacting the instructor after the due date for the exam will usually mean the late work policy will apply (see the syllabus).* For example, if the exam reports as not activated, or the website is down, you have lost Internet access, etc. contact the instructor as soon as possible for assistance.
 
 * Chapters 1 - 5: Routing and EIGRP Exam
 * Chapters 6 - 10: OSPF Exam
