update itc2480 schedule

--- a/franske-course-information/modules/itc-2480/pages/lab8.adoc
+++ b/franske-course-information/modules/itc-2480/pages/lab8.adoc
@@ -921,7 +921,7 @@ ben@2480-Z:~$ sudo less /var/log/nginx/access.log.1
 .. As we also previously mentioned older log files may get compressed by _gzip_ when getting rotated. If you need to view one of these you might try using the `zcat` program which temporarily decompresses text files on the fly. This could be combined with a pipe to `less` in order to allow scrolling like `zcat /var/log/nginx/access.log.2.gz | less`. Try this out now.
 .. Just like with `journalctl` we can "follow" a _syslog_ style log file to watch changes in realtime, this time using the `tail` command. Run the command `tail -f /var/log/nginx/access.log` as an administrator. You should see the last 10 lines of your current _nginx_ access log (if there are any entries!) but you will *not* be returned to a command prompt.
 .. Now go to a web browser on your management PC and open your blog web site running on the IP address of your Linux server. If things are working correctly you should see a bunch of new access log entries show up on your SSH session as all of the text, graphics, scripts, etc. are pulled from your web server to your browser. When you're done press CTRL-C to send a SIGINT message to the `tail` program and get back to the command line.
-. ALmost every background thing that happens on your Linux system gets logged somewhere, both successful and unsuccessfull things. This can make viewing log files a very important step when troubleshooting something that is not working right. The trick is usually to find the right log file (or journal message) with a useful description of what happened. Spend a little more time looking around the _systemd journal_ and the _syslog_ style logs on your system for some of the things we have installed and worked with such as _firewalld_, _fail2ban_, _php-fpm_, _networking_, _kea-dhcp4-server_, _ssh_, etc.
+. Almost every background thing that happens on your Linux system gets logged somewhere, both successful and unsuccessfull things. This can make viewing log files a very important step when troubleshooting something that is not working right. The trick is usually to find the right log file (or journal message) with a useful description of what happened. Spend a little more time looking around the _systemd journal_ and the _syslog_ style logs on your system for some of the things we have installed and worked with such as _firewalld_, _fail2ban_, _php-fpm_, _networking_, _kea-dhcp4-server_, _ssh_, etc.
 
 == Understand and modify the Linux boot process
 . Booting a modern computer is an incredibly complex process! As we have updated hardware, features, and expectations of modern systems we have needed to build more and more layers into the boot and system initialization process. In this section we'll explore the _basics_ of how Linux systems boot and look at some common modifications you might want to make.
